--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-community/checkbox": "^0.5.14",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
@@ -18,7 +19,8 @@
     "react-native-get-random-values": "^1.8.0",
     "react-native-web": "~0.18.9",
     "uuid": "^9.0.0",
-    "zustand": "^4.1.5"
+    "zustand": "^4.1.5",
+    "expo-checkbox": "~2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
