--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -12,15 +12,17 @@
     "@expo/webpack-config": "^0.17.2",
     "@react-native-community/checkbox": "^0.5.14",
     "expo": "~47.0.9",
+    "expo-checkbox": "~2.2.2",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.15.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-dotenv": "^3.4.6",
     "react-native-get-random-values": "^1.8.0",
     "react-native-web": "~0.18.9",
     "uuid": "^9.0.0",
-    "zustand": "^4.1.5",
-    "expo-checkbox": "~2.2.2"
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
