--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-community/checkbox": "^0.5.14",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~47.0.9",
     "expo-checkbox": "~2.2.2",
     "expo-status-bar": "~1.4.2",
@@ -20,6 +22,7 @@
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.6",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "uuid": "^9.0.0",
     "zustand": "^4.1.5"
