--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@hookform/resolvers": "^2.9.10",
     "@react-native-community/checkbox": "^0.5.14",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~47.0.9",
     "expo-checkbox": "~2.2.2",
@@ -19,12 +22,16 @@
     "firebase": "^9.15.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.41.5",
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.6",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "uuid": "^9.0.0",
+    "yup": "^0.32.11",
     "zustand": "^4.1.5"
   },
   "devDependencies": {
